# minwon-rag-ai

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: routes.py
app/core/: config.py
app/llm/: qwen.py
app/prompt/: templates.py
app/retriever/: client.py  public_api.py  query_parser.py
app/schemas/: models.py
